src/objects/Map_Template__c.object
<CustomObject>
    <description>The map template specifies the object names and appearance for a given type of relationship chart.</description>
    <fields>
        <fullName>Block_Name_Plural__c</fullName>
        <label>Block Name Plural</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Block_Name_Singular__c</fullName>
        <label>Block Name Singular</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Block_Storage__c</fullName>
        <description>This is an XML BLOB of information that defines the how the bubble looks and how child object fields are mapped to the block.</description>
        <label>Block Storage</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Child_Editable_Fields__c</fullName>
        <label>Child Editable Fields</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Child_Link_Field__c</fullName>
        <description>The name of the child object field that links the child object to another child object.</description>
        <label>Child Link Field</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Child_Object_Type__c</fullName>
        <description>This is the child entity name, for example Contact, or a custom object name.</description>
        <label>Child Object Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Extra_Data__c</fullName>
        <description>This is an expansion field for future needs.</description>
        <label>Extra Data</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Extra_Field__c</fullName>
        <description>This is an expansion field for future needs.</description>
        <label>Extra Field</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Flag1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Flag1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flag2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Flag2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flag3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Flag3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Background_Template__c</fullName>
        <label>Other Background Template</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Parent_Links__c</fullName>
        <description>A comma delimited list of other child fields that are links to important parent objects. These objects will be loaded at runtime and their data will be available for bubble generation.</description>
        <label>Other Parent Links</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Visible_Templates__c</fullName>
        <description>This is a comma delimited list of the names of other map templates that should be available for selection when this definition is being used.</description>
        <label>Other Visible Templates</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Over1__c</fullName>
        <label>Over1</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Over2__c</fullName>
        <label>Over2</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Over3__c</fullName>
        <label>Over3</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Parent_Custom_Filter__c</fullName>
        <label>Parent Custom Filter</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Parent_Link_Field__c</fullName>
        <description>The name of the child object field that links the child object to the parent object.</description>
        <label>Parent Link Field</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Parent_Object_Type__c</fullName>
        <description>This is the entity name of the parent object, for example, Account or Opportunity.</description>
        <label>Parent Object Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Picture_Storage__c</fullName>
        <label>Picture Storage</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <description>This is the version number of this schema definition.</description>
        <label>Version</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Map Template</label>
    <nameField>
        <label>Map Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Map Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>